# virtual_machine

./: CMakeLists.txt  main.cpp
pointcloud_data/: pointcloud.pcd
